namespaces/live.cloud-platform.service.justice.gov.uk/laa-crown-court-remuneration-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-crown-court-remuneration-uat"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
    pod-security.kubernetes.io/enforce: restricted
    crime-apps-fdc-api-use: "uat"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-crime-higher-billing"
    cloud-platform.justice.gov.uk/application: "Crown Court Remuneration"
    cloud-platform.justice.gov.uk/owner: "Crime Higher Billing: laaclairtaskforce@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-crown-court-remuneration"
    cloud-platform.justice.gov.uk/team-name: "laa-clair-taskforce"
    cloud-platform.justice.gov.uk/review-after: ""
