namespaces/live.cloud-platform.service.justice.gov.uk/laa-crown-court-remuneration-uat/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: laa-crown-court-remuneration-uat
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: laa-crown-court-remuneration-uat
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-prometheus-scraping
  namespace: laa-crown-court-remuneration-uat
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: monitoring
---
kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: block-egress
  namespace: laa-crown-court-remuneration-uat
spec:
  order: 50.0
  selector: all()
  egress:
    - action: Deny
  types:
    - Egress
---
kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: allow-egress-ip
  namespace: laa-crown-court-remuneration-uat
spec:
  order: 49.0
  selector: all()
  egress:
    - action: Allow
      destination:
        nets:
          - 172.20.0.0/16
  types:
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-source-namespace
  namespace: laa-crown-court-remuneration-uat
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          cloud-platform.justice.gov.uk/namespace: laa-maat-scheduled-tasks-uat
